--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -10,6 +10,7 @@ spec:
   - protocol: TCP
     port: 8080
     nodePort: 8080
+    
 
 ---
 
@@ -34,3 +35,10 @@ spec:
         image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
         ports:
         - containerPort: 8080
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 15
+          timeoutSeconds: 1
+          periodSeconds: 10
